--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,18 @@
     <title>DisconnectX</title>
 </head>
 <body>
-    <div class="userInput"></div>
+    <div class="container-sm appContent">
+        <!-- 2.4 or 5 GHZ Selection default: 2.4 GHZ-->
+        <div class="input-group mb-3">
+            <select class="form-select  text-bg-dark bg-dark" id="inputGroupSelect02">
+                <option value="2.4 GHZ" selected>2.4</option>
+                <option value="5 GHZ">5</option>
+            </select>
+            <label class="input-group-text  text-bg-dark bg-dark" for="inputGroupSelect02">GHZ</label>
+        </div>
+        <!-- Target Selection -->
+        <div class="userInput"></div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <script src="index.js" type = "module"></script>
 </body>
